# TR_ros

./: .gitignore  README.md  TP_sujet.md
src/turtle_action/: CMakeLists.txt  package.xml
src/turtle_action/src/: traj_gen_client.cpp  traj_gen_server.cpp
src/turtle_action_interfaces/: CMakeLists.txt  package.xml
src/turtle_action_interfaces/action/: TrajGen.action
src/turtle_custom/: CMakeLists.txt  package.xml
src/turtle_custom/include/turtle_custom/: custom_sub.hpp  visibility_control.h
src/turtle_custom/launch/: custom_launch.py
src/turtle_custom/src/: custom_sub.cpp
turtlesim_extension/: CMakeLists.txt  package.xml
turtlesim_extension/src/: turtle_gt.cpp
